tests/paczka1/fuzzy1/36844481.err
Error in line 12: bFoAgnDAhfX S173 95,29
Error in line 6: 7t9s9w2DlMi A561 39,4
Error in line 14: 7t9s9w2DlMi S514 61,6
Error in line 16: tBZYal7x3Sq S449 8,3
Error in line 21: 4RPd S514 98,8
Error in line 27: bFoAgnDAhfX S173 44,8
Error in line 28: vUgZMgXE S514 98,1
Error in line 31: bFoAgnDAhfX A561 25,9
